# ale-benitez-port

./: .gitignore  0-docker-compose.dev.yml  1-docker-compose.prod.yml  2-docker-compose.reservas.yml  3-docker-compose.reservas.prod.yml  CLAUDE.md  README.md  concepto.md  docker-compose.yml  migrate_photos.sh
.claude/: settings.json
ab_reservas_project/: .env  Dockerfile  README.md  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  seed_dev.py
ab_reservas_project/ab_reservas_project/: asgi.py  settings.py  urls.py  wsgi.py
ab_reservas_project/app_analytics/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
ab_reservas_project/app_analytics/migrations/: 0001_initial.py  0002_rename_app_analyti_page_ts_idx_app_analyti_page_6ab01e_idx_and_more.py
ab_reservas_project/app_fractalia/: admin.py  apps.py  models.py  urls.py  views.py
ab_reservas_project/app_fractalia/migrations/: 0001_initial.py  0002_pendingbooking.py  0003_pendingbooking_client_name.py  0004_alter_pendingbooking_status.py  0005_alter_pendingbooking_status.py  0006_booking_client_phone_pendingbooking_client_phone_and_more.py  0007_add_fractabox_resource.py  0008_add_responded_status.py  0009_add_products.py  0010_data_migration.py  0011_normalize_fractabox_package_labels.py  0012_booking_client_name.py  0013_fix_fractabox_label_2.py  (+5 more)
ab_reservas_project/app_links/: admin.py  apps.py  models.py  urls.py  views.py
ab_reservas_project/app_portfolio/: admin.py  apps.py  models.py  urls.py  views.py
ab_reservas_project/app_reservas/: admin.py  apps.py  models.py  urls.py  views.py
(+37 files in other folders)
