[project]
name = "ab-reservas-project"
version = "0.1.0"
description = "Proyecto Django de reservas"
authors = [{ name = "josecuevas", email = "jmcuev89@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django (>=5.2.8,<6.0.0)",
  "uvicorn (>=0.38.0,<0.39.0)",
  "psycopg[binary] (>=3.2.12,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# 👉 Duplicamos por compatibilidad con package mode
name = "ab-reservas-project"
version = "0.1.0"
description = "Proyecto Django de reservas"
authors = ["josecuevas <jmcuev89@gmail.com>"]

packages = [
  { include = "ab_reservas_project" }
]
